--- a/lib/osrs_ge_tracker_web/templates/item/index.html.eex
+++ b/lib/osrs_ge_tracker_web/templates/item/index.html.eex
@@ -1,3 +1,3 @@
 <div class="phx-hero">
-  <h2>Hello World, from <%= @name %> (id <%= @id %>)!</h2>
+  <h2>Hello World, from <%= @name %> (id <%= @id %>) (price <%= @price %>)!</h2>
 </div>
