--- a/lib/osrs_ge_tracker_web/templates/layout/app.html.eex
+++ b/lib/osrs_ge_tracker_web/templates/layout/app.html.eex
@@ -8,9 +8,20 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
-  <body class="font-sans">
+  <body class="font-sans text-gray-900 bg-purple-100">
     <header>
-      This is the header
+      <nav class="flex items-center justify-between flex-wrap bg-purple-800 p-6">
+        <div class="flex items-center flex-shrink-0 text-white mr-6">
+          <span class="font-semibold text-xl">OSRS Flip Finder</span>
+        </div>
+        <div class="w-full block flex-grow lg:flex lg:items-center lg:w-auto">
+          <div class="text-sm lg:flex-grow">
+            <a href="/items" class="block mt-4 lg:inline-block lg:mt-0 text-purple-100 hover:text-white mr-4">
+              Top Items
+            </a>
+          </div>
+        </div>
+      </nav>
     </header>
     <main role="main">
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
