--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -6,19 +6,11 @@
  *
  * You can see the styles here:
  * https://github.com/tailwindcss/tailwindcss/blob/master/css/preflight.css
- *
- * If using `postcss-import`, use this import instead:
- *
- * @import "tailwindcss/preflight";
  */
- @tailwind preflight;
+ @tailwind base;
 
  /**
   * This injects any component classes registered by plugins.
-  *
-  * If using `postcss-import`, use this import instead:
-  *
-  * @import "tailwindcss/components";
   */
  @tailwind components;
 
@@ -31,20 +23,11 @@
   *
   * .btn { ... }
   * .form-input { ... }
-  *
-  * Or if using a preprocessor or `postcss-import`:
-  *
-  * @import "components/buttons";
-  * @import "components/forms";
   */
 
  /**
   * This injects all of Tailwind's utility classes, generated based on your
   * config file.
-  *
-  * If using `postcss-import`, use this import instead:
-  *
-  * @import "tailwindcss/utilities";
   */
  @tailwind utilities;
 
@@ -56,9 +39,4 @@
   *
   * .bg-pattern-graph-paper { ... }
   * .skew-45 { ... }
-  *
-  * Or if using a preprocessor or `postcss-import`:
-  *
-  * @import "utilities/background-patterns";
-  * @import "utilities/skew-transforms";
   */
