--- a/lib/osrs_ge_tracker_web/templates/item/list.html.eex
+++ b/lib/osrs_ge_tracker_web/templates/item/list.html.eex
@@ -2,3 +2,9 @@ Some controls for liquid assets, min %, etc
 <%= for item <- @items do %>
   <%= render("card.html", item: item) %>
 <% end %>
+
+<script>
+  //
+  // var el = document.querySelectorAll('.card-chart');
+  // console.log(el);
+</script>
