--- a/lib/osrs_ge_tracker_web/templates/layout/app.html.eex
+++ b/lib/osrs_ge_tracker_web/templates/layout/app.html.eex
@@ -7,6 +7,8 @@
     <title>Dionysius</title>
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
+
+    <script src="https://d3js.org/d3.v5.min.js"></script>
   </head>
   <body class="font-sans text-gray-900 bg-purple-100">
     <header>
