--- a/lib/osrs_ge_tracker_web/templates/item/list.html.eex
+++ b/lib/osrs_ge_tracker_web/templates/item/list.html.eex
@@ -4,7 +4,7 @@ Some controls for liquid assets, min %, etc
 <% end %>
 
 <script>
-  //
-  // var el = document.querySelectorAll('.card-chart');
-  // console.log(el);
+window.onload = () => {
+  window.osrs_ge_tracker.chart_hourly(<%= ids_json(@items) %>);
+}
 </script>
